--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "iview": "^2.14.3",
+    "jsonwebtoken": "^8.3.0",
     "md5": "^2.2.1",
     "mongodb": "^3.1.1",
     "vue": "^2.5.2",
